arreglando medidas index

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     <div class="imagen">
                         <a href="detail-movies.html"><img src="./img/los ilusionistas.jfif" alt="Ficha nada es lo que parece"></a>
                     </div>
-                        <h3>LOS ILUSIONISTAS: NADA ES LO QUE PARECE</h3>
+                        <h3> NADA ES LO QUE PARECE</h3>
                         <p>2013 ‧ Crimen/Suspenso ‧ 1h 55m</p>
                 </article>
                 <article>
@@ -227,14 +227,14 @@
                         <a href="detail-movies.html"><img src="./img/HTLAMI10D.jpg" alt="Ficha como perder a un hombre en 10 días"></a>
                     </div>
                         <h3>CÓMO PERDER A UN HOMBRE EN 10 DÍAS</h3>
-                        <p>2003 ‧ Romance/Comedia romántica ‧ 1h 56m</p>
+                        <p>2003 ‧Comedia romántica ‧ 1h 56m</p>
                 </article>
                 <article>
                     <div class="imagen">
                         <a href="detail-movies.html"><img src="./img/losjuegos.jfif" alt="Ficha los juegos del hambre"></a>
                     </div>
-                        <h3>LOS JUEGOS DEL HAMBRE: SINSAJO PARTE 2</h3>
-                        <p>2012 ‧ Ciencia ficción/Acción ‧ 2h 22m</p>
+                        <h3>LOS JUEGOS DEL HAMBRE:SINSAJO </h3>
+                        <p>2012 ‧ Ciencia ficción ‧ 2h 22m</p>
                 </article>
             </div>
             
@@ -271,40 +271,6 @@
                         <p>2014 ‧ Drama ‧ 5 temporadas</p>
                 </article>
              </div>
-
-            <article class="titulos">
-                <h2>• LO MÁS VISTO EN SERIES•</h2>
-            </article>
-                <div class="popu-pelis">
-                <article>
-                    <div class="imagen">
-                        <a href="detail-series.html"><img src="./img/anne.jpeg" alt="Ficha Anne"></a>
-                    </div>
-                        <h3>ANNE WITH AN E</h3>
-                        <p>2017 ‧ Coming-of-age ‧ 3 temporadas</p>
-                </article>
-                <article>
-                    <div class="imagen">
-                        <a href="detail-series.html"><img src="./img/los100.jpg" alt="Ficha the 100"></a>
-                    </div>
-                        <h3>LOS 100 </h3>
-                        <p>2014 ‧ Ciencia ficción ‧ 7 temporadas</p>
-                </article>
-                <article>
-                    <div class="imagen">
-                        <a href="detail-series.html"><img src="./img/visavis.jfif" alt="Ficha vis a vis"></a>
-                    </div>
-                        <h3>VIS A VIS</h3>
-                        <p>2015 ‧ Suspenso ‧ 4 temporadas</p>
-                </article>
-                <article>
-                    <div class="imagen">
-                        <a href="detail-series.html"><img src="./img/outlander.jpg" alt="Ficha outlander"></a>
-                    </div>
-                        <h3>OUTLANDER</h3>
-                        <p>2014 ‧ Drama ‧ 5 temporadas</p>
-                </article>
-                    </div>
 
                 <article class="titulos">   
                     <h2>• LO MÁS VISTO EN SERIES •</h2>
