arreglando medidas generales

--- a/favourite.html
+++ b/favourite.html
@@ -45,14 +45,16 @@
         </nav>  
     </header>
     <main>
-        <div class="peliculas-populares">
+        <div class="endgame">
             <h2>• FAVORITOS •</h2>
-              <div class="main-container">
+            <div class="endgame-container">
+              <div class="endgame">
                 <div class="detail-marvel-endgame">
-                    <a href="detail-movies.html"><img src="./img/marvel-endgame.jfif" alt="Ficha end game"></a>
+                    <a href="detail-movies.html"><img src="./img/marvel-endgame.jpg" alt="Ficha end game"></a>
                     <h3>MARVEL: END GAME</h3>
                     <p>2019 ‧ Acción/Ciencia ficción ‧ 3h 2m</p>
                 </div>
+            </div>
     </main>
 
     <footer>
