--- a/detail-movies.html
+++ b/detail-movies.html
@@ -47,7 +47,7 @@
             <h2>• MARVEL: ENDGAME •</h2>
             <div class="endgame-container">
                 <div class="detail-marvel-endgame">
-                   <a href="detail-movies.html"><img src="./img/marvel-endgame.jfif" alt="Ficha end game"></a>
+                   <a href="detail-movies.html"><img src="./img/marvel-endgame.jpg" alt="Ficha end game"></a>
                    <h3>MARVEL: END GAME</h3>
                    <p>2019 ‧ Acción/Ciencia ficción ‧ 3h 2m</p>
                 </div>
