--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/estilos.css">
     <title>Registro</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 </head>
@@ -84,7 +84,7 @@
                 </div>
     
                 <div class="boton-registro">
-                    <a href=""><input type="button" value="Registrarme"></a>
+                    <a href=""><input type="button" value="Registrarme" ></a>
                     <a href="./register.html"><input type="button" value="Cancelar"></a>
                 </div>
 
