--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
         </nav>  
     </header>
-    <!-- <main>
+   <!-- <!--  <!-- <main>
         <div class="peliculas-populares">
             <h2>• PELÍCULAS POPULARES •</h2>
               <div class="main-container">
@@ -166,7 +166,7 @@
                         <p>2008 ‧ Drama ‧ 5 temporadas</p>
                     </div>
                 </div>
-    </main> --> -->
+    </main> -->  -->
     <main>
         <div class="main-container">
             <article class="titulos">
