Dejando la pagina casi perfecta, falta arreglar favoritos

--- a/detail-genres.html
+++ b/detail-genres.html
@@ -68,7 +68,7 @@
                     <p>2010 ‧ Romance/Drama ‧ 1h 47m</p>
                 </div>
                 <div class="genres-box">
-                    <a href="detail-series.html"><img src="./img/anne.jfif" alt="Ficha de Anne with an E"></a>
+                    <a href="detail-series.html"><img src="./img/anne.jpeg" alt="Ficha de Anne with an E"></a>
                     <h3>    ANNE WITH AN E   </h3>
                     <p>2017 ‧ Coming-of-age ‧ 3 temporadas</p>
                 </div>
