--- a/detail-genres.html
+++ b/detail-genres.html
@@ -43,37 +43,131 @@
             <div class="fotodrama">
                 <a href="genres.html"><img src="./img/DRAMA (1).png" alt="DRAMA"></a>
             </div>
-            <div class="detailsG-tittle">
-                <h2>• RECOMENDADO PARA TÍ •</h2>
-            </div>
-            <div class="detailsG">
-                <div class="genres-box">
-                    <a href="detail-series.html"><img src="./img/outlander.jpg" alt="Ficha de outlander"></a>
-                    <h3>OUTLANDER</h3>
-                    <p>2014 ‧ Drama ‧ 5 temporadas</p>
-                </div>
-                <div class="genres-box">
-                    <a href="detail-movies.html"><img src="./img/la-chica-danesa.jpg" alt="Ficha de La chica danesa"></a>
-                    <h3>LA CHICA DANESA</h3>
-                    <p>2015 ‧ Romance/Drama ‧ 1h 59m</p>
-                 </div>
-                 <div class="genres-box">
-                    <a href="detail-series.html"><img src="./img/jane.jpg" alt="Ficha de Jane the Virgin"></a>
-                    <h3>    JANE THE VIRGIN  </h3>
-                    <p>2014 ‧ Drama ‧ 5 temporadas</p>
-                </div>
-                <div class="genres-box">
-                    <a href="detail-movies.html"><img src="./img/thelastsong.jfif" alt="Ficha de the last song"></a>
-                    <h3>    THE LAST SONG    </h3>
-                    <p>2010 ‧ Romance/Drama ‧ 1h 47m</p>
-                </div>
-                <div class="genres-box">
-                    <a href="detail-series.html"><img src="./img/anne.jpeg" alt="Ficha de Anne with an E"></a>
-                    <h3>    ANNE WITH AN E   </h3>
-                    <p>2017 ‧ Coming-of-age ‧ 3 temporadas</p>
-                </div>
-            </div>
         </div>
+        <div class="titulo">
+            <h2> • RECOMENDADO PARA TÍ • </h2>
+        </div>
+            <section class="contenedor">
+                
+                <div class="hijo">
+                    <div class="imagen-port">
+                        <a href=".detail-series.html"><img src="./img/outlander.jpg" alt=""></a>
+                        <h3>OUTLANDER</h3>
+                        <p>2014 ‧ Drama ‧ 5 temporadas</p>
+                    </div>
+                </div>
+                <div class="hijo">
+                    <div class="imagen-port">
+                        <a href=".detail-movies.html"><img src="./img/thelastsong.jfif" alt=""></a>
+                        <h3>THE LAST SONG </h3>
+                        <p>2010 ‧ Romance/Drama ‧ 1h 47m </p>
+                    </div>
+                </div>
+                <div class="hijo">
+                    <div class="imagen-port">
+                        <a href=".detail-movies.html"><img src="./img/la-chica-danesa.jpg" alt=""></a>
+                        <h3>LA CHICA DANESA</h3>
+                        <p>2015 ‧ Romance/Drama ‧ 1h 59m</p>
+                    </div>
+                </div>
+                <div class="hijo">
+                    <div class="imagen-port">
+                        <a href=".detail-series.html"><img src="./img/anne.jpeg" alt=""></a>
+                        <h3>ANNE WITH AN E</h3>
+                        <p>2017 ‧ Coming-of-age ‧ 3 temporadas</p>
+                    </div>
+                </div>
+                <div class="hijo">
+                    <div class="imagen-port">
+                        <a href=".detail-series.html"><img src="./img/jane.jpg" alt=""></a>
+                        <h3>JANE THE VIRGIN </h3>
+                        <p>2014 ‧ Drama ‧ 5 temporadas</p>
+                    </div>
+                </div>
+
+            </section>
+            <div class="titulo">
+                <h2> • PELÍCULAS DE DRAMA ACLAMADAS POR EL PÚBLICO • </h2>
+            </div>
+                <section class="contenedor">
+                    <div class="hijo">
+                        <div class="imagen-port">
+                            <a href=".detail-movies.html"><img src="./img/thelastsong.jfif" alt=""></a>
+                            <h3>THE LAST SONG </h3>
+                            <p>2010 ‧ Romance/Drama ‧ 1h 47m </p>
+                        </div>
+                    </div>
+                    <div class="hijo">
+                        <div class="imagen-port">
+                            <a href=".detail-movies.html"><img src="./img/2queens.jfif" alt=""></a>
+                            <h3>LAS DOS REINAS</h3>
+                            <p>2018 ‧ Drama/Historia ‧ 2h 4m</p>
+                        </div>
+                    </div>
+                    <div class="hijo">
+                        <div class="imagen-port">
+                            <a href=".detail-movies.html"><img src="./img/dearjohn.jfif" alt=""></a>
+                            <h3>DEAR JOHN</h3>
+                            <p>2010 ‧ Romance/Drama ‧ 1h 48m</p>
+                        </div>
+                    </div>
+                    <div class="hijo">
+                        <div class="imagen-port">
+                            <a href=".detail-movies.html"><img src="./img/mary.jpg" alt=""></a>
+                            <h3>MARY SHELLEY</h3>
+                            <p>2017 ‧ Romance/Drama ‧ 2 horas</p>
+                        </div>
+                    </div>
+                    <div class="hijo">
+                        <div class="imagen-port">
+                            <a href=".detail-movies.html"><img src="./img/la-chica-danesa.jpg" alt=""></a>
+                            <h3>LA CHICA DANESA</h3>
+                            <p>2015 ‧ Romance/Drama ‧ 1h 59m</p>
+                        </div>
+                    </div>
+                </section>
+
+            </section>
+            <div class="titulo">
+                <h2> • SERIES DE DRAMA ACLAMADAS POR EL PÚBLICO • </h2>
+            </div>
+                <section class="contenedor">
+                    <div class="hijo">
+                        <div class="imagen-port">
+                            <a href=".detail-series.html"><img src="./img/breakingbad.jpg" alt=""></a>
+                            <h3>BREAKING BAD</h3>
+                            <p>2008 ‧ Drama ‧ 5 temporadas</p>
+                        </div>
+                    </div>
+                    <div class="hijo">
+                        <div class="imagen-port">
+                            <a href=".detail-series.html"><img src="./img/jane.jpg" alt=""></a>
+                            <h3>JANE THE VIRGIN </h3>
+                            <p>2014 ‧ Drama ‧ 5 temporadas</p>
+                        </div>
+                    </div>
+                    <div class="hijo">
+                        <div class="imagen-port">
+                            <a href=".detail-movies.html"><img src="./img/sexeducation.jpeg" alt=""></a>
+                            <h3>SEX EDUCATION</h3>
+                            <p>2019 ‧ Drama ‧ 3 temporadas</p>
+                        </div>
+                    </div>
+                    <div class="hijo">
+                        <div class="imagen-port">
+                            <a href=".detail-series.html"><img src="./img/outlander.jpg" alt=""></a>
+                            <h3>OUTLANDER</h3>
+                            <p>2014 ‧ Drama ‧ 5 temporadas</p>
+                        </div>
+                    </div>
+                    <div class="hijo">
+                        <div class="imagen-port">
+                            <a href=".detail-series.html"><img src="./img/anne.jpeg" alt=""></a>
+                            <h3>ANNE WITH AN E</h3>
+                            <p>2017 ‧ Coming-of-age ‧ 3 temporadas</p>
+                        </div>
+                    </div>
+                </section>
     </main>
 
 
