--- a/favourite.html
+++ b/favourite.html
@@ -45,16 +45,16 @@
         </nav>  
     </header>
     <main>
-        <div class="endgame">
+        <div class="favoritos-container">
             <h2>• FAVORITOS •</h2>
-            <div class="endgame-container">
-              <div class="endgame">
-                <div class="detail-marvel-endgame">
+            <div class="endgamefavoritos-container">
+                <div class="endgamefavoritosficha-container">
                     <a href="detail-movies.html"><img src="./img/marvel-endgame.jpg" alt="Ficha end game"></a>
                     <h3>MARVEL: END GAME</h3>
                     <p>2019 ‧ Acción/Ciencia ficción ‧ 3h 2m</p>
                 </div>
             </div>
+        </div>
     </main>
 
     <footer>
