--- a/favourite.html
+++ b/favourite.html
@@ -47,11 +47,16 @@
     <main>
         <div class="favoritos-container">
             <h2>• FAVORITOS •</h2>
-            <div class="endgamefavoritos-container">
+            <div class="favoritosdiv-container">
                 <div class="endgamefavoritosficha-container">
                     <a href="detail-movies.html"><img src="./img/marvel-endgame.jpg" alt="Ficha end game"></a>
                     <h3>MARVEL: END GAME</h3>
                     <p>2019 ‧ Acción/Ciencia ficción ‧ 3h 2m</p>
+                </div>
+                <div class="annewithanefavoritosficha-container">
+                    <a href="./detail-series.html"><img src="./img/anne.jpeg" alt="Ficha Anne with ann e"></a>
+                    <h3>ANNE WITH AN E</h3>
+                    <p>2017 ‧ Coming-of-age ‧ 3 temporadas</p>
                 </div>
             </div>
         </div>
