--- a/results.html
+++ b/results.html
@@ -21,7 +21,7 @@
                 <a href="./index.html">Inicio</a> 
             </div>
             <div class="header-nav">
-                <a href="./genres.html">Géneros</a> 
+                <a href="./generos.html">Géneros</a> 
             </div>
             <div class="header-nav">
                 <a href="./detail-movies.html">Películas</a>
