Haciendo responsive y arreglando details y favoritos

--- a/detail-series.html
+++ b/detail-series.html
@@ -43,7 +43,38 @@
     </header>
 
     <main>
-        <div class="detailseries-container">
+        <div class="titulo">
+            <h2> • ANNE WITH AN E •</h2>
+        </div>
+        <section class="contenedor">                 
+            <div class="hijo-detail-series">
+                <div class="imagen-port series">
+                    <a href=".detail-movies.html"><img src="./img/anne.jpeg" alt=""></a>
+                    <h3>ANNE WITH AN E</h3>
+                    <p>2017 ‧ Coming-of-age ‧ 3 temporadas </p>
+                </div>
+                <div class="detailseriessinopsis-container">                       
+                    <h3>Género: Drama, pieza de época</h3>
+                    <h3>Clasificación: Intensas secuencias de acción y violencia de ciencia ficción,
+                    lenguaje y algunas referencias crudas.</h3>
+                    <h3>Sinópsis: Después de una infancia difícil, donde fue pasando de orfanato a hogares
+                    de acogida, es enviada por error a vivir con una solterona y su hermano. Cuando cumple
+                    13 años, Anne va a conseguir transformar su vida y el pequeño pueblo donde vive gracias
+                    a su fuerte personalidad, intelecto e imaginación.</h3>
+                    <h3>Calificación: Al 75% de los usuarios le gustó la película.
+                    Calificación promedio: 4/5.
+                    Total de Reseñas: 213.</h3>   
+                <div>
+                <div class="boton-favoritos">
+                    <div class="detail-favoritos">
+                        <i class="fas fa-star star"></i>
+                        <a href="./favourite.html"><h3>Agregar a Favoritos</h3></a>   
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        <!-- <div class="detailseries-container">
             <h2>• ANNE WITH AN E •</h2>
             <div class="detailseriesdiv-container">
                 <div class="detailseriesficha-container">
@@ -70,7 +101,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </main>
  
     <footer>
