pagina terminada:falta hacer responsive el header y el footer

--- a/detail-movies.html
+++ b/detail-movies.html
@@ -18,7 +18,7 @@
                 <a href="./index.html">Inicio</a> 
             </div>
             <div class="header-nav">
-                <a href="./genres.html">Géneros</a> 
+                <a href="./generos.html">Géneros</a> 
             </div>
             <div class="header-nav">
                 <a href="./detail-movies.html">Películas</a>
@@ -75,35 +75,6 @@
             </div>
         </section>
         
-        <!-- <div class="detailmovie-container">
-            <h2>• MARVEL: ENDGAME •</h2>
-            <div class="detailmoviesdiv-container">
-                <div class="detailmovieficha-container">
-                   <img src="./img/marvel-endgame.jpg" alt="Ficha end game">
-                   <h3>MARVEL: END GAME</h3>
-                   <p>2019 ‧ Acción/Ciencia ficción ‧ 3h 2m</p>
-                </div>
-                <div class="detailmoviessinopsis-container">                       
-                    <h3>Género: Accion, Aventura, Ciencia Ficción y Fantasía</h3>
-                    <h3>Clasificación: Intensas secuencias de acción y violencia de ciencia ficción,
-                    lenguaje y algunas referencias crudas.</h3>
-                    <h3>Sinópsis: Después de los eventos devastadores de "Avengers:
-                    Infinity War", el universo está en ruinas debido a las acciones 
-                    de Thanos, el Titán Loco. Con la ayuda de los aliados que quedaron,
-                    los Vengadores deberán reunirse una vez más para intentar detenerlo
-                    y restaurar el orden en el universo de una vez por todas.</h3>
-                    <h3>Calificación: Al 75% de los usuarios le gustó la película.
-                    Calificación promedio: 4/5.
-                    Total de Reseñas: 213.</h3>   
-                <div>
-                <div class="detailmoviesalinearfavoritos">
-                    <div class="detailmoviesfavoritos">
-                       <i class="fas fa-star star"></i>
-                       <a href="./favourite.html"><h3>Agregar a Favoritos</h3></a>   
-                    </div>
-                </div> 
-            </div>
-        </div> -->
     </main>
 
     <footer>
