--- a/favourite.html
+++ b/favourite.html
@@ -51,41 +51,26 @@
             <section class="contenedor">
                 <div class="hijo">
                     <div class="imagen-port">
-                        <a href=".detail-movies.html"><img src="./img/marvel-endgame.jpg" alt=""></a>
+                        <a href="./detail-movies.html"><img src="./img/marvel-endgame.jpg" alt=""></a>
                         <h3>MARVEL: END GAME</h3>
                         <p>2019 ‧ Acción/Ciencia ficción ‧ 3h 2m</p>
                     </div>
                 </div>
                 <div class="hijo">
                     <div class="imagen-port">
-                        <a href=".detail-movies.html"><img src="./img/thelastsong.jfif" alt=""></a>
+                        <a href="./detail-movies.html"><img src="./img/thelastsong.jfif" alt=""></a>
                         <h3>THE LAST SONG </h3>
                         <p>2010 ‧ Romance/Drama ‧ 1h 47m </p>
                     </div>
                 </div>
                 <div class="hijo">
                     <div class="imagen-port">
-                        <a href=".detail-movies.html"><img src="./img/la-chica-danesa.jpg" alt=""></a>
+                        <a href="./detail-movies.html"><img src="./img/la-chica-danesa.jpg" alt=""></a>
                         <h3>LA CHICA DANESA</h3>
                         <p>2015 ‧ Romance/Drama ‧ 1h 59m</p>
                     </div>
                 </div>
             </section>
-    
-        <!-- <div class="favoritos-container">
-            <h2>• FAVORITOS •</h2> -->
-            <!-- <div class="favoritosdiv-container">
-                <div class="endgamefavoritosficha-container">
-                    <a href="detail-movies.html"><img src="./img/marvel-endgame.jpg" alt="Ficha end game"></a>
-                    <h3>MARVEL: END GAME</h3>
-                    <p>2019 ‧ Acción/Ciencia ficción ‧ 3h 2m</p>
-                </div>
-                <div class="annewithanefavoritosficha-container">
-                    <a href="./detail-series.html"><img src="./img/anne.jpeg" alt="Ficha Anne with ann e"></a>
-                    <h3>ANNE WITH AN E</h3>
-                    <p>2017 ‧ Coming-of-age ‧ 3 temporadas</p>
-                </div>
-            </div> -->
         </div>
     </main>
 
