--- a/results.html
+++ b/results.html
@@ -44,24 +44,33 @@
             </div>
         </nav>  
     </header>
-    <!-- <main>
-        <div class="peliculas-populares">
-            <h2>• MARVEL: ENDGAME •</h2>
-              <div class="main-container">
-                <div class="detail-marvel-endgame">
-                    <a href="detail-movies.html"><img src="./img/marvel-endgame.jfif" alt="Ficha end game"></a>
-                    <h3>MARVEL: END GAME</h3>
-                    <p>2019 ‧ Acción/Ciencia ficción ‧ 3h 2m</p>
-                </div>
-    </main> -->
     <main>
-        <div class="resultados">
-            <h2>• RESULTADOS DE BÚSQUEDA •</h2>
-                <div class="main-container-result">
-                    <div>
-                     <h3>Lo sentimos, no pudimos encontrar resultados para tu búsqueda. Por favor, intentelo más tarde.</h3>
+        <div class="titulo">
+            <h2> • RESULTADOS DE BÚSQUEDA •</h2>
+        </div>
+            <section class="contenedor">
+                <div class="hijo">
+                    <div class="imagen-port">
+                        <a href="./detail-movies.html"><img src="./img/marvel-endgame.jpg" alt=""></a>
+                        <h3>MARVEL: END GAME</h3>
+                        <p>2019 ‧ Acción/Ciencia ficción ‧ 3h 2m</p>
                     </div>
-                </div>     
+                </div>
+                <div .hijo>
+                    <div class="imagen-port">
+                        <a href="./detail-movies.html"><img src="./img/anne.jpeg" alt=""></a>
+                        <h3>ANNE WITH AN E</h3>
+                        <p>2017 ‧ Coming-of-age ‧ 3 temporadas </p>
+                    </div>
+                </div>
+                <div class="hijo">
+                    <div class="imagen-port">
+                        <a href="./detail-movies.html"><img src="./img/breakingbad.jpg" alt=""></a>
+                        <h3>BREAKING BAD</h3>
+                        <p>2008 ‧ Drama ‧ 5 temporadas</p>
+                    </div>
+                </div>
+            </section>
     </main>
 
     <footer>
