HACIENDO ENTRE TODOS RESPONSIVE LOS HEADER Y FOOTER

--- a/favourite.html
+++ b/favourite.html
@@ -14,6 +14,9 @@
 <body>
     <header>       
         <nav>
+            <div class="burguermenu">
+                <i class="fas fa-bars burguer"></i>
+            </div>
             <div id="logo">
                 <a href="./index.html"><img class="logo" src="./img/logo-blanco-3.png" alt="Logo de la pagina"></a>
             </div>
@@ -41,6 +44,9 @@
              </div> 
             <div class="header-registro">
                 <a href="./login.html"><input type="button" value="Login"></a>
+            </div>
+            <div class="registro-logo">
+                <a href="./register.html"><i class="fas fa-user"></i></a>
             </div>
         </nav>  
     </header>
