cambio boludo en footer

--- a/login.html
+++ b/login.html
@@ -81,7 +81,7 @@
     </main>
    
     <footer>
-        <div class="container_footer">
+        <article class="container_footer">
             <div class="box-footer">
                 <div class="logo">
                     <img src="./img/logo-blanco-3.png" alt="logo">
@@ -121,7 +121,7 @@
             <div class="box-copyright">
                 <hr>
                 <p>Todos los derechos reservados <i class="far fa-copyright"></i> 2021 <b>D&I Films</b></p>
-            </div>
+            </article>
     </footer>    
 </body>
 </html>
