--- a/detail-movies.html
+++ b/detail-movies.html
@@ -84,7 +84,7 @@
     </main>
 
     <footer>
-        <div class="container_footer">
+        <article class="container_footer">
             <div class="box-footer">
                 <div class="logo">
                     <img src="./img/logo-blanco-3.png" alt="logo">
@@ -124,7 +124,7 @@
             <div class="box-copyright">
                 <hr>
                 <p>Todos los derechos reservados <i class="far fa-copyright"></i> 2021 <b>D&I Films</b></p>
-            </div>
+            </article>
     </footer>    
 </body>
 </html>
