--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         </main>
 
         <footer>
-            <div class="container_footer">
+            <article class="container_footer">
                 <div class="box-footer">
                     <div class="logo">
                         <img src="./img/logo-blanco-3.png" alt="logo">
@@ -267,7 +267,7 @@
                     <hr>
                     <p>Todos los derechos reservados <i class="far fa-copyright"></i> 2021 <b>D&I Films</b></p>
                 </div>
-            </div>
+            </article>
         </footer>
 </body>
 </html>
