arreglando cosas y haciendo funcionar al buscador

--- a/detail-movies.html
+++ b/detail-movies.html
@@ -32,8 +32,10 @@
             <div class="header-nav">
                 <a href="./favourite.html">Favoritos</a>
             </div>         
-            <div class= "header-busqueda" >
-                <input type="search" name="busqueda" value="" placeholder="Buscar películas o series">
+            <div class= "header-busqueda">
+                <form action="./results.html" method="GET">
+                    <input type="search" name="busqueda" value="" placeholder="Buscar películas o series">
+                </form>
                 <a href="./results.html"><i class="fas fa-search lupa"></i></a>
             </div>
             <div class="header-registro">
