--- a/login.html
+++ b/login.html
@@ -31,11 +31,13 @@
             </div>    
             <div class="header-nav">
                 <a href="./favourite.html">Favoritos</a>
-            </div>    
-            <div class= "header-busqueda" >
-                <input type="search" name="busqueda" value="" placeholder="Buscar películas o series">
+            </div>  
+            <div class= "header-busqueda">
+                <form action="./results.html" method="GET">
+                    <input type="search" name="busqueda" value="" placeholder="Buscar películas o series">
+                </form>
                 <a href="./results.html"><i class="fas fa-search lupa"></i></a>
-            </div>
+            </div>  
             <div class="header-registro">
                 <a href="./register.html"><input type="button" value="Registrarse"></a>
              </div> 
