--- a/detail-genres.html
+++ b/detail-genres.html
@@ -28,9 +28,14 @@
             </div>
             <div class="header-nav">
                 <a href="./detail-series.html">Series</a>
-            </div>   
+            </div>  
+            <div class="header-nav">
+                <a href="./favourite.html">Favoritos</a>
+            </div>
             <div class= "header-busqueda">
-                <input type="search" name="busqueda" value="" placeholder="Buscar películas o series">
+                <form action="./results.html" method="GET">
+                    <input type="search" name="busqueda" value="" placeholder="Buscar películas o series">
+                </form>
                 <a href="./results.html"><i class="fas fa-search lupa"></i></a>
             </div>
             <div class="header-registro">
