--- a/register.html
+++ b/register.html
@@ -33,7 +33,9 @@
                 <a href="./favourite.html">Favoritos</a>
             </div>
             <div class= "header-busqueda">
-                <input type="search" name="busqueda" value="" placeholder="Buscar películas o series">
+                <form action="./results.html" method="GET">
+                    <input type="search" name="busqueda" value="" placeholder="Buscar películas o series">
+                </form>
                 <a href="./results.html"><i class="fas fa-search lupa"></i></a>
             </div>
             <div class="header-registro">
