--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
                 <div class="header-nav">
                     <a href="./detail-series.html">Series</a>
                 </div>   
-                
-            
+                <div class="header-nav">
+                    <a href="./favourite.html">Favoritos</a>
+                </div>
                 <div class= "header-busqueda">
                     <div class= "header-busqueda">
                         <form action="./results.html" method="GET">
