--- a/index.html
+++ b/index.html
@@ -62,35 +62,35 @@
                 <section class="contenedor">
                     <div class="hijo">
                         <div class="imagen-port">
-                            <a href="./detail-movies.html"><img src="./img/marvel-endgame.jpg" alt=""></a>
+                            <a href="./detail-movies.html"><img src="./img/marvel-endgame.jpg" alt="Ficha endgame"></a>
                             <h3>MARVEL: END GAME</h3>
                             <p>2019 ‧ Acción/Ciencia ficción ‧ 3h 2m</p>
                         </div>
                     </div>
                     <div class="hijo">
                         <div class="imagen-port">
-                            <a href="./detail-movies.html"><img src="./img/thelastsong.jfif" alt=""></a>
+                            <a href="./detail-movies.html"><img src="./img/thelastsong.jfif" alt="ficha the last song"></a>
                             <h3>THE LAST SONG </h3>
                             <p>2010 ‧ Romance/Drama ‧ 1h 47m </p>
                         </div>
                     </div>
                     <div class="hijo">
                         <div class="imagen-port">
-                            <a href="./detail-movies.html"><img src="./img/la-chica-danesa.jpg" alt=""></a>
+                            <a href="./detail-movies.html"><img src="./img/la-chica-danesa.jpg" alt="ficha la chica danesa"></a>
                             <h3>LA CHICA DANESA</h3>
                             <p>2015 ‧ Romance/Drama ‧ 1h 59m</p>
                         </div>
                     </div>
                     <div class="hijo">
                         <div class="imagen-port">
-                            <a href="./detail-movies.html"><img src="./img/sherlock-holmes.jfif" alt=""></a>
+                            <a href="./detail-movies.html"><img src="./img/sherlock-holmes.jfif" alt="fcha sherlock holmes"></a>
                             <h3>SHERLOCK HOLMES</h3>
                             <p>2009 ‧ Misterio/Misterio ‧ 2h 8m</p>
                         </div>
                     </div>
                     <div class="hijo">
                         <div class="imagen-port">
-                            <a href="./detail-movies.html"><img src="./img/HTLAMI10D.jpg" alt=""></a>
+                            <a href="./detail-movies.html"><img src="./img/HTLAMI10D.jpg" alt="ficha como perder a un hombre en 10 dias"></a>
                             <h3>CÓMO PERDER </h3>
                             <p>2003 ‧Comedia romántica ‧ 1h 56m</p>
                         </div>
@@ -102,35 +102,35 @@
                     <section class="contenedor">
                         <div .hijo>
                             <div class="imagen-port">
-                                <a href="./detail-movies.html"><img src="./img/nerve.jpg" alt=""></a>
+                                <a href="./detail-movies.html"><img src="./img/nerve.jpg" alt="ficha nerve"></a>
                                 <h3>NERVE: UN JUEGO SIN LÍMITES </h3>
                                 <p>2016 ‧ Suspenso/Acción ‧ 1h 36m </p>
                             </div>
                         </div>
                         <div class="hijo">
                             <div class="imagen-port">
-                                <a href="./detail-movies.html"><img src="./img/los ilusionistas.jfif" alt=""></a>
+                                <a href="./detail-movies.html"><img src="./img/los ilusionistas.jfif" alt="ficha los ilusionistas"></a>
                                 <h3>NADA ES LO QUE PARECE</h3>
                                 <p>2013 ‧ Crimen/Suspenso ‧ 1h 55m</p>
                             </div>
                         </div>
                         <div class="hijo">
                             <div class="imagen-port">
-                                <a href="./detail-movies.html"><img src="./img/losjuegos.jfif" alt=""></a>
+                                <a href="./detail-movies.html"><img src="./img/losjuegos.jfif" alt="ficha los juegos del hambre"></a>
                                 <h3>LOS JUEGOS DEL HAMBRE: SINSAJO</h3>
                                 <p>2012 ‧ Ciencia ficción ‧ 2h 22m </p>
                             </div>
                         </div>
                         <div class="hijo">
                             <div class="imagen-port">
-                                <a href="./detail-movies.html"><img src="./img/marvel-endgame.jpg" alt=""></a>
+                                <a href="./detail-movies.html"><img src="./img/marvel-endgame.jpg" alt="ficha endgame"></a>
                                 <h3>MARVEL AVENGERS: ENDGAME</h3>
                                 <p>2019 ‧ Acción/Ciencia ficción ‧ 3h 2m </p>
                             </div>
                         </div>
                         <div class="hijo">
                             <div class="imagen-port">
-                                <a href="./detail-movies.html"><img src="./img/JOE-BLACK.jfif" alt=""></a>
+                                <a href="./detail-movies.html"><img src="./img/JOE-BLACK.jfif" alt="ficha joe black"></a>
                                 <h3>¿QUIÉN CONOCE A JOE BLACK?</h3>
                                 <p>1998 ‧ Romance/Fantasía ‧ 3h 1m </p>
                             </div>
@@ -144,35 +144,35 @@
                             
                             <div .hijo>
                                 <div class="imagen-port">
-                                    <a href="./detail-movies.html"><img src="./img/anne.jpeg" alt=""></a>
+                                    <a href="./detail-movies.html"><img src="./img/anne.jpeg" alt="ficha anne with an e"></a>
                                     <h3>ANNE WITH AN E</h3>
                                     <p>2017 ‧ Coming-of-age ‧ 3 temporadas </p>
                                 </div>
                             </div>
                             <div class="hijo">
                                 <div class="imagen-port">
-                                    <a href="./detail-movies.html"><img src="./img/breakingbad.jpg" alt=""></a>
+                                    <a href="./detail-movies.html"><img src="./img/breakingbad.jpg" alt="ficha breaking bad"></a>
                                     <h3>BREAKING BAD</h3>
                                     <p>2008 ‧ Drama ‧ 5 temporadas</p>
                                 </div>
                             </div>
                             <div class="hijo">
                                 <div class="imagen-port">
-                                    <a href="./detail-movies.html"><img src="./img/los100.jpg" alt=""></a>
+                                    <a href="./detail-movies.html"><img src="./img/los100.jpg" alt="ficha los 100"></a>
                                     <h3>LOS 100</h3>
                                     <p>2014 ‧ Ciencia ficción ‧ 7 temporadas</p>
                                 </div>
                             </div>
                             <div class="hijo">
                                 <div class="imagen-port">
-                                    <a href="./detail-movies.html"><img src="./img/visavis.jfif" alt=""></a>
+                                    <a href="./detail-movies.html"><img src="./img/visavis.jfif" alt="ficha vis a vis"></a>
                                     <h3>VIS A VIS</h3>
                                     <p>2015 ‧ Suspenso ‧ 4 temporadas</p>
                                 </div>
                             </div>
                             <div class="hijo">
                                 <div class="imagen-port">
-                                    <a href="./detail-movies.html"><img src="./img/outlander.jpg" alt=""></a>
+                                    <a href="./detail-movies.html"><img src="./img/outlander.jpg" alt="ficha outlander"></a>
                                     <h3>OUTLANDER</h3>
                                     <p>2014 ‧ Drama ‧ 5 temporadas </p>
                                 </div>
@@ -185,35 +185,35 @@
                                 
                                 <div class="hijo">
                                     <div class="imagen-port">
-                                        <a href="./detail-movies.html"><img src="./img/cobrakai.jfif"></a>
+                                        <a href="./detail-movies.html"><img src="./img/cobrakai.jfif">ficha cobra kai</a>
                                         <h3>COBRA KAI</h3>
                                         <p>2018 ‧ Acción ‧ 3 temporadas </p>
                                     </div>
                                 </div>
                                 <div class="hijo">
                                     <div class="imagen-port">
-                                        <a href="./detail-movies.html"><img src="./img/jane.jpg" alt=""></a>
+                                        <a href="./detail-movies.html"><img src="./img/jane.jpg" alt="ficha jane the virgin"></a>
                                         <h3>JANE THE VIRGIN</h3>
                                         <p>2014 ‧ Drama ‧ 5 temporadas</p>
                                     </div>
                                 </div>
                                 <div class="hijo">
                                     <div class="imagen-port">
-                                        <a href="./detail-movies.html"><img src="./img/flash.png" alt=""></a>
+                                        <a href="./detail-movies.html"><img src="./img/flash.png" alt="ficha flash"></a>
                                         <h3>FLASH</h3>
                                         <p>2014 ‧ Ciencia ficción ‧ 7 temporada</p>
                                     </div>
                                 </div>
                                 <div class="hijo">
                                     <div class="imagen-port">
-                                        <a href="./detail-movies.html"><img src="./img/anne.jpeg" alt=""></a>
+                                        <a href="./detail-movies.html"><img src="./img/anne.jpeg" alt="ficha anne with an e"></a>
                                         <h3>ANNE WITH AN E</h3>
                                         <p>2017 ‧ Coming-of-age ‧ 3 temporadas</p>
                                     </div>
                                 </div>
                                 <div class="hijo">
                                     <div class="imagen-port">
-                                        <a href="./detail-movies.html"><img src="./img/sexeducation.jpeg" alt=""></a>
+                                        <a href="./detail-movies.html"><img src="./img/sexeducation.jpeg" alt="ficha sex education"></a>
                                         <h3>SEX EDUCATION</h3>
                                         <p>2019 ‧ Drama ‧ 3 temporadas</p>
                                     </div>
