--- a/detail-movies.html
+++ b/detail-movies.html
@@ -57,7 +57,7 @@
         <section class="contenedor">                 
             <div class="hijo-detail-series">
                 <div class="imagen-port series">
-                    <a href=".detail-movies.html"><img src="./img/marvel-endgame.jpg" alt=""></a>
+                    <a href="./detail-movies.html"><img src="./img/marvel-endgame.jpg" alt=""></a>
                     <h3>MARVEL: ENDGAME</h3>
                     <p>2019 ‧ Acción/Ciencia ficción ‧ 3h 2m</p>
                 </div>
