--- a/detail-series.html
+++ b/detail-series.html
@@ -57,7 +57,7 @@
         <section class="contenedor">                 
             <div class="hijo-detail-series">
                 <div class="imagen-port series">
-                    <a href=".detail-movies.html"><img src="./img/anne.jpeg" alt=""></a>
+                    <a href="./detail-series.html"><img src="./img/anne.jpeg" alt=""></a>
                     <h3>ANNE WITH AN E</h3>
                     <p>2017 ‧ Coming-of-age ‧ 3 temporadas </p>
                 </div>
