--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <i class="fas fa-bars burguer"></i>
                 </div>
                 <div>
-                    <a href="index.html"> <img class="logo" src="./img/logo-blanco-3.png" alt="Logo de la pagina"></a>
+                    <a href="./index.html"> <img class="logo" src="./img/logo-blanco-3.png" alt="Logo de la pagina"></a>
                 </div>
                 <div class="header-nav">
                     <a href="./index.html">Inicio</a> 
