primer fetch del index para películas populares

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+        <script src="./javascript/index.js"></script>
         <title>Inicio</title>
     </head>
     <body>
@@ -60,7 +61,7 @@
                 <h2> • PELÍCULAS POPULARES •</h2>
             </div>
                 <section class="contenedor">
-                    <div class="hijo">
+                    <!-- <div class="hijo">
                         <div class="imagen-port">
                             <a href="./detail-movies.html"><img src="./img/marvel-endgame.jpg" alt="Ficha endgame"></a>
                             <h3>MARVEL: END GAME</h3>
@@ -94,7 +95,7 @@
                             <h3>CÓMO PERDER </h3>
                             <p>2003 ‧Comedia romántica ‧ 1h 56m</p>
                         </div>
-                    </div>
+                    </div> -->
                 </section>
                 <div class="titulo">
                     <h2>• LO MÁS VISTO EN PELÍCULAS •</h2>
