api terminada en el index

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                 <div class="titulo">
                     <h2>• LO MÁS VISTO EN PELÍCULAS •</h2>
                 </div>
-                    <section class="contenedor">
-                        <div .hijo>
+                    <section class="contenedor1">
+                        <!-- <div .hijo>
                             <div class="imagen-port">
                                 <a href="./detail-movies.html"><img src="./img/nerve.jpg" alt="ficha nerve"></a>
                                 <h3>NERVE: UN JUEGO SIN LÍMITES </h3>
@@ -135,15 +135,15 @@
                                 <h3>¿QUIÉN CONOCE A JOE BLACK?</h3>
                                 <p>1998 ‧ Romance/Fantasía ‧ 3h 1m </p>
                             </div>
-                        </div>
+                        </div> -->
                     </section>
 
                     <div class="titulo">
                         <h2> • SERIES POPULARES •</h2>
                     </div>
-                        <section class="contenedor">
+                        <section class="contenedor2">
                             
-                            <div .hijo>
+                            <!-- <div .hijo>
                                 <div class="imagen-port">
                                     <a href="./detail-movies.html"><img src="./img/anne.jpeg" alt="ficha anne with an e"></a>
                                     <h3>ANNE WITH AN E</h3>
@@ -177,14 +177,14 @@
                                     <h3>OUTLANDER</h3>
                                     <p>2014 ‧ Drama ‧ 5 temporadas </p>
                                 </div>
-                            </div>
+                            </div> -->
                         </section>
                         <div class="titulo">
                             <h2> • LO MÁS VISTO EN SERIES •</h2>
                         </div>
-                            <section class="contenedor">
+                            <section class="contenedor3">
                                 
-                                <div class="hijo">
+                                <!-- <div class="hijo">
                                     <div class="imagen-port">
                                         <a href="./detail-movies.html"><img src="./img/cobrakai.jfif">ficha cobra kai</a>
                                         <h3>COBRA KAI</h3>
@@ -218,7 +218,7 @@
                                         <h3>SEX EDUCATION</h3>
                                         <p>2019 ‧ Drama ‧ 3 temporadas</p>
                                     </div>
-                                </div>
+                                </div> -->
                             </section>          
         </main>
 
