validacion terminada y vinculacion interna con js

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-        <script src="./javascript/index.js"></script>
+        <script src="./js/index.js"></script>
+        <script src="./js/validacion.js"></script>
         <title>Inicio</title>
     </head>
     <body>
@@ -40,6 +41,7 @@
                 <div class= "header-busqueda">
                         <form action="./results.html" method="GET">
                             <input type="search" name="busqueda" value="" placeholder="Buscar películas o series">
+                            <p class="alert"></p>
                         </form>
                         <a href="./results.html"><i class="fas fa-search lupa"></i></a>
                 </div>
