--- a/detail-series.html
+++ b/detail-series.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./css/estilos.css">
     <title>Series</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <script src="./js/index.js"></script>
+    <script src="./js/validacion.js"></script>
 </head>
 <body>
     <header>       
