--- a/index.html
+++ b/index.html
@@ -228,10 +228,10 @@
             <article class="container_footer">
                 <div class="box-footer">
                     <div class="logo">
-                        <img src="./img/logo-blanco-3.png" alt="logo">
+                        <img src="./img/logo tmdb.svg" alt="logo tdmb">
+                        <!-- <img src="./img/logo-blanco-3.png" alt="logo"> -->
                     </div>
                     <div class="terms">
-                        <p> D&I Films es un servicio de streaming gratuito que tiene como objetivo que todas las personas puedan accerder a contenido de calidad. Surge como una iniciativa de la coorporativa D&I Code, encabezada y desarrollada por sus dueños fundadores Chiterer Sebastian, Denham Tobias y Teperman Ana.</p>
                     </div>
                 </div>
                 
@@ -270,8 +270,9 @@
                 </div>
              
                 <div class="box-copyright">
+                    <p class="integrantes"> D&I Films es un servicio de streaming gratuito que tiene como objetivo que todas las personas puedan accerder a contenido de calidad. Surge como una iniciativa de la coorporativa D&I Code, encabezada y desarrollada por sus dueños fundadores Chiterer Sebastian, Denham Tobias y Teperman Ana.</p>
                     <hr>
-                    <p>Todos los derechos reservados <i class="far fa-copyright"></i> 2021 <b>D&I Films</b></p>
+                    <p class="derechos">Todos los derechos reservados <i class="far fa-copyright"></i> 2021 <b>D&I Films</b></p>
                 </div>
             </article>
         </footer>
