--- a/detail-movies.html
+++ b/detail-movies.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <script src="./js/index.js"></script>
     <script src="./js/validacion.js"></script>
+    <script src="./js/detail-movies.js"></script>
 </head>
 <body>
     <header>       
@@ -54,10 +55,10 @@
 
     <main>
         <div class="titulo">
-            <h2> • MARVEL: ENDGAME •</h2>
+            <h2> • Detalle de Película •</h2>
         </div>
         <section class="contenedor">                 
-            <div class="hijo-detail-series">
+            <!-- <div class="hijo-detail-series">
                 <div class="imagen-port series">
                     <a href="./detail-movies.html"><img src="./img/marvel-endgame.jpg" alt=""></a>
                     <h3>MARVEL: ENDGAME</h3>
@@ -82,7 +83,7 @@
                         <a href="./favourite.html"><h3>Agregar a Favoritos</h3></a>   
                     </div>
                 </div>
-            </div>
+            </div> -->
         </section>
         
     </main>
