--- a/detail-genres.html
+++ b/detail-genres.html
@@ -36,6 +36,7 @@
             <div class= "header-busqueda">
                 <form action="./results.html" method="GET">
                     <input type="search" name="busqueda" value="" placeholder="Buscar películas o series">
+                    <p class="alert"></p>
                 </form>
                 <a href="./results.html"><i class="fas fa-search lupa"></i></a>
             </div>
