estructura fetch para el detailGereno

--- a/detail-genres.html
+++ b/detail-genres.html
@@ -62,7 +62,7 @@
         </div>
             <section class="contenedor">
                 
-                <div class="hijo">
+                <!-- <div class="hijo">
                     <div class="imagen-port">
                         <a href=".detail-series.html"><img src="./img/outlander.jpg" alt=""></a>
                         <h3>OUTLANDER</h3>
@@ -96,7 +96,7 @@
                         <h3>JANE THE VIRGIN </h3>
                         <p>2014 ‧ Drama ‧ 5 temporadas</p>
                     </div>
-                </div>
+                </div> -->
 
             </section>
             <div class="titulo">
