agregue el peliculas.html y series.html

--- a/detail-genres.html
+++ b/detail-genres.html
@@ -25,10 +25,10 @@
                 <a href="./generos.html">Géneros</a> 
             </div>
             <div class="header-nav">
-                <a href="./detail-movies.html">Películas</a>
+                <a href="./peliculas.html">Películas</a>
             </div>
             <div class="header-nav">
-                <a href="./detail-series.html">Series</a>
+                <a href="./series.html">Series</a>
             </div>  
             <div class="header-nav">
                 <a href="./favourite.html">Favoritos</a>
@@ -54,7 +54,7 @@
     <main>
         <div class="detail-generos">
             <div class="fotodrama">
-                <a href="genres.html"><img src="./img/DRAMA (1).png" alt="DRAMA"></a>
+                <!-- <a href="genres.html"><img src="./img/DRAMA (1).png" alt="DRAMA"></a> -->
             </div>
         </div>
         <div class="titulo">
