--- a/login.html
+++ b/login.html
@@ -25,10 +25,10 @@
                 <a href="./generos.html">Géneros</a> 
             </div>
             <div class="header-nav">
-                <a href="./detail-movies.html">Películas</a>
+                <a href="./peliculas.html">Películas</a>
             </div>
             <div class="header-nav">
-                <a href="./detail-series.html">Series</a>
+                <a href="./series.html">Series</a>
             </div>    
             <div class="header-nav">
                 <a href="./favourite.html">Favoritos</a>
