--- a/results.html
+++ b/results.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <script src="./js/validacion.js"></script>
+    <script src="./js/results.js "></script>
 </head>
 <body>
     <header>       
@@ -59,7 +60,7 @@
             <h2> • RESULTADOS DE BÚSQUEDA •</h2>
         </div>
             <section class="contenedor">
-                <div class="hijo">
+                <!-- <div class="hijo">
                     <div class="imagen-port">
                         <a href="./detail-movies.html"><img src="./img/marvel-endgame.jpg" alt=""></a>
                         <h3>MARVEL: END GAME</h3>
@@ -79,7 +80,7 @@
                         <h3>BREAKING BAD</h3>
                         <p>2008 ‧ Drama ‧ 5 temporadas</p>
                     </div>
-                </div>
+                </div> -->
             </section>
     </main>
 
