--- a/detail-series.html
+++ b/detail-series.html
@@ -8,7 +8,7 @@
     <title>Series</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <script src="./js/validacion.js"></script>
-    <script src="./js/detail-series.js"></script>
+    <script src="./js/detail-serie.js"></script>
 </head>
 <body>
     <header>       
