--- a/favourite.html
+++ b/favourite.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <script src="./js/validacion.js"></script>
+    <script src="./js/favoritos.js"></script>
 </head>
 <body>
     <header>       
@@ -56,30 +57,10 @@
     </header>
     <main>
         <div class="titulo">
-            <h2> • FAVORITOS •</h2>
+          <h1>• Favoritos •</h1>
         </div>
             <section class="contenedor">
-                <div class="hijo">
-                    <div class="imagen-port">
-                        <a href="./detail-movies.html"><img src="./img/marvel-endgame.jpg" alt=""></a>
-                        <h3>MARVEL: END GAME</h3>
-                        <p>2019 ‧ Acción/Ciencia ficción ‧ 3h 2m</p>
-                    </div>
-                </div>
-                <div class="hijo">
-                    <div class="imagen-port">
-                        <a href="./detail-movies.html"><img src="./img/thelastsong.jfif" alt=""></a>
-                        <h3>THE LAST SONG </h3>
-                        <p>2010 ‧ Romance/Drama ‧ 1h 47m </p>
-                    </div>
-                </div>
-                <div class="hijo">
-                    <div class="imagen-port">
-                        <a href="./detail-movies.html"><img src="./img/la-chica-danesa.jpg" alt=""></a>
-                        <h3>LA CHICA DANESA</h3>
-                        <p>2015 ‧ Romance/Drama ‧ 1h 59m</p>
-                    </div>
-                </div>
+                
             </section>
         </div>
     </main>
