nueva funcionalidad para busqueda

--- a/results.html
+++ b/results.html
@@ -57,7 +57,7 @@
     </header>
     <main>
         <div class="titulo">
-            <h2> • RESULTADOS DE BÚSQUEDA •</h2>
+            <!-- <h2> • RESULTADOS DE BÚSQUEDA •</h2> -->
         </div>
             <section class="contenedor">
                 <!-- <div class="hijo">
