Terminando el favoritos, decoracion de detail y ultimos detalles

--- a/favourite.html
+++ b/favourite.html
@@ -57,11 +57,19 @@
     </header>
     <main>
         <div class="titulo">
-          <h1>• Favoritos •</h1>
+          <h1>• Películas Favoritas •</h1>
         </div>
             <section class="contenedor">
                 
             </section>
+        </div>
+        <div class="titulo">
+            <h1>• Series Favoritas •</h1>
+        </div>
+        <div>
+            <article class="contenedor">
+                
+            </article>
         </div>
     </main>
 
