--- a/peliculas.html
+++ b/peliculas.html
@@ -39,11 +39,11 @@
                 <a href="./favourite.html">Favoritos</a>
             </div>
             <div class= "header-busqueda">
-                    <form action="./results.html" method="GET">
-                        <input type="search" name="busqueda" value="" placeholder="Buscar películas o series">
-                        <p class="alert"></p>
-                    </form>
-                    <a href="./results.html"><i class="fas fa-search lupa"></i></a>
+                <form action="./results.html" method="GET">
+                    <input type="search" name="busqueda" value="" placeholder="Buscar películas o series">
+                    <button class="lupa-search" type="submit" name="buscar-lupa"><i class="fas fa-search lupa"></i></button>
+                    <p class="alert"></p> 
+                </form>
             </div>
           
             <div class="header-registro">
