--- a/detailGeneroSerie.html
+++ b/detailGeneroSerie.html
@@ -37,9 +37,9 @@
             <div class= "header-busqueda">
                 <form action="./results.html" method="GET">
                     <input type="search" name="busqueda" value="" placeholder="Buscar películas o series">
-                    <p class="alert"></p>
+                    <button class="lupa-search" type="submit" name="buscar-lupa"><i class="fas fa-search lupa"></i></button>
+                    <p class="alert"></p> 
                 </form>
-                <a href="./results.html"><i class="fas fa-search lupa"></i></a>
             </div>
             <div class="header-registro">
                 <a href="./register.html"><input type="button" value="Registrarse"></a>
