--- a/favourite.html
+++ b/favourite.html
@@ -59,7 +59,7 @@
         <div class="titulo">
           <h1>• Películas Favoritas •</h1>
         </div>
-            <section class="contenedor">
+            <section class="moviefav">
                 
             </section>
         </div>
@@ -67,9 +67,9 @@
             <h1>• Series Favoritas •</h1>
         </div>
         <div>
-            <article class="contenedor">
-                
-            </article>
+            <section class="seriefav">
+
+            </section>
         </div>
     </main>
 
