--- a/results.html
+++ b/results.html
@@ -60,6 +60,7 @@
             <!-- <h2> • RESULTADOS DE BÚSQUEDA •</h2> -->
         </div>
             <section class="contenedor">
+                <img class="gif" src="./img/gifLoading.gif!w340" alt="gif Loading">
                 <!-- <div class="hijo">
                     <div class="imagen-port">
                         <a href="./detail-movies.html"><img src="./img/marvel-endgame.jpg" alt=""></a>
